üçgen tasarimi gerçeklendi. 2 tane arasinda karar verilecek

--- a/app/src/main/res/drawable/arrow_green.xml
+++ b/app/src/main/res/drawable/arrow_green.xml
@@ -10,6 +10,6 @@
         >
         <bitmap
             android:gravity="center|bottom|clip_vertical|end"
-            android:src="@drawable/arrow_r_1" />
+            android:src="@drawable/arrow_g_1" />
     </item>
 </layer-list>
